--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,15 +7,18 @@ environment:
   sdk: '>=3.3.4 <4.0.0'
 
 dependencies:
-  
+
   equatable: ^2.0.5
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   flutter_bloc: ^8.1.5
+  realm: ^2.3.0
   shared_preferences: ^2.2.3
-  table_calendar: ^3.1.1
-  # calendar_agenda: ^0.0.2+3
-  
+  table_calendar: ^3.0.9
+  uuid: ^4.4.0
+  auto_route: ^8.1.3
 
 dev_dependencies:
   flutter_test:
@@ -26,3 +29,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+flutter_intl:
+  enabled: true
