--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,8 +17,10 @@ dependencies:
   realm: ^2.3.0
   shared_preferences: ^2.2.3
   table_calendar: ^3.0.9
+  intl: ^0.18.1
   uuid: ^4.4.0
   auto_route: ^8.1.3
+  package_info_plus: ^8.0.0
 
 dev_dependencies:
   flutter_test:
