--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,8 +24,11 @@ if (flutterVersionName == null) {
 
 android {
     namespace "com.example.fitplan"
-    compileSdk flutter.compileSdkVersion
-    ndkVersion flutter.ndkVersion
+    // compileSdk flutter.compileSdkVersion
+    // ndkVersion flutter.ndkVersion
+    compileSdkVersion 34 
+    ndkVersion "25.1.8937393" // Добавлено вручную для совместимости с зависимостями
+
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -45,8 +48,10 @@ android {
         applicationId "com.example.fitplan"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
-        targetSdkVersion flutter.targetSdkVersion
+        // minSdkVersion flutter.minSdkVersion
+        // targetSdkVersion flutter.targetSdkVersion
+        minSdkVersion 23
+        targetSdkVersion 34
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
