--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: fitplan
 description: "A new Flutter project."
 publish_to: 'none'
-version: 0.1.3+4
+version: 0.2.3+1
 
 environment:
   sdk: '>=3.3.4 <4.0.0'
@@ -14,19 +14,24 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_bloc: ^8.1.6
-  shared_preferences: ^2.3.2
+  shared_preferences: ^2.5.1
   table_calendar: ^3.1.2
   intl: ^0.19.0
   uuid: ^4.5.1
   auto_route: ^9.2.2
   package_info_plus: ^8.1.0
+  drift: ^2.25.0
+  sqlite3_flutter_libs: ^0.5.30
+  path_provider: ^2.1.5
+  path: ^1.9.0 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-  mockito: ^5.4.4
-  build_runner: ^2.4.13
+  mockito: ^5.4.5
+  build_runner: ^2.4.14
+  drift_dev: ^2.25.1
   
   
 
