--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: fitplan
 description: "A new Flutter project."
 publish_to: 'none'
-version: 0.2.3+1
+version: 0.2.3+2
 
 environment:
   sdk: '>=3.3.4 <4.0.0'
@@ -32,7 +32,7 @@ dev_dependencies:
   mockito: ^5.4.5
   build_runner: ^2.4.14
   drift_dev: ^2.25.1
-  
+  intl_utils: ^2.8.10
   
 
 flutter:
