--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: fitplan
 description: "A new Flutter project."
 publish_to: 'none'
-version: 0.2.3+2
+version: 0.2.3+5
 
 environment:
   sdk: '>=3.3.4 <4.0.0'
@@ -24,7 +24,10 @@ dependencies:
   sqlite3_flutter_libs: ^0.5.30
   path_provider: ^2.1.5
   path: ^1.9.0 
-
+  duration_picker: ^1.2.0
+  flutter_time_picker_spinner: ^2.0.0
+  flutter_launcher_icons: ^0.14.3
+  flutter_native_splash: ^2.4.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -37,5 +40,30 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/flutter_splash_screen.png
 flutter_intl:
   enabled: true
+
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/ic_launcher.png"
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assets/ic_launcher_foreground.png"
+  remove_alpha_ios: true
+
+
+flutter_native_splash:
+  color: "#FFFFFF"  # Белый фон
+  image: assets/flutter_splash_screen.png  # Путь к сплэш-изображению
+
+  android: true
+  ios: true
+
+  android_12:
+    image: assets/flutter_splash_screen.png
+    icon_background_color: "#FFFFFF"
+
+  
